2019-11-13 Wed 12:54:59 PM
Added hostname to filters. Filtering now operates on string:
<hostname> + " " + <trigger_description>

2019-11-07 Thu 10:38:11 AM
Fixed erors in filters.

2019-11-06 Wed 09:29:15 AM
Linux: fixed error.
When no notification daemon zbxmonitor dropped connection to server silently.
Now writes down to log and exit.

2019-11-04 Mon 11:04:56 AM
Windows port

2019-11-01 Fri 16:25:13 PM
syslog has been replaced by logging (Win)

2019-10-31 Thu 12:52:12 PM
notify2 has been replaced by plyer (for Windows compatibility)