@@ -1,3 +1,7 @@
+2020-05-17 Sun 14:19:02 PM
+Fixed: contxt menu
+Added: triggers min_severity (see config.example)
+
 2019-11-13 Wed 12:54:59 PM
 Added hostname to filters. Filtering now operates on string:
 <hostname> + " " + <trigger_description>
